Bug 392992 - Krita does not return to proper zoom level when restoring the previous session
Summary: Krita does not return to proper zoom level when restoring the previous session
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-11 04:56 UTC by Isaac Zuniga
Modified: 2018-04-24 11:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Isaac Zuniga 2018-04-11 04:56:00 UTC
If the canvas is at 100%, there's no issue, but if I set the zoom to 200% then end the session, for some reason the next session gets loaded with a zoom over 800%! The issue doesn't seem to have an extreme effect on percentages less than 100%.

https://drive.google.com/file/d/1MwqMVbbaMGeJfqUDTpv-P8ftD9vXhA81/view?usp=sharing
Comment 1 Isaac Zuniga 2018-04-11 05:01:30 UTC
Sorry about this, but I forgot to mention the build number:

4.1.0-pre-alpha (git 82a8db7)
Comment 2 joupent 2018-04-24 11:26:11 UTC
Git commit 92e7f3391dfc82d99ced69b0568e5261e97d4c05 by Jouni Pentikäinen.
Committed on 24/04/2018 at 11:23.
Pushed by jounip into branch 'master'.

Fix saving correct zoom level to sessions

M  +2    -1    libs/ui/KisView.cpp

https://commits.kde.org/krita/92e7f3391dfc82d99ced69b0568e5261e97d4c05