Fix saving correct zoom level to sessions

BUG: 392992